# orthogonal-ricker

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: 01-baseline.yaml  01-pythia-14m-minipile-smoke.yaml  02-pythia-14m-minipile-baseline.yaml  03-pythia-14m-minipile-random-full-10min.yaml  04-pythia-14m-minipile-ricker-naive-smoke.yaml  05-pythia-14m-minipile-l1-naive-smoke.yaml  06-pythia-14m-minipile-orthogonal-ricker-smoke.yaml  07-pythia-14m-minipile-orthogonal-l1-smoke.yaml  08-pythia-14m-minipile-ricker-naive-short.yaml  09-pythia-14m-minipile-l1-naive-short.yaml  10-pythia-14m-minipile-orthogonal-ricker-short.yaml  100-pythia-14m-minipile-post-layernorm-relu-input-histograms.yaml  101-pythia-14m-minipile-post-layernorm-relu-mlp-hidden-histograms.yaml  102-pythia-14m-minipile-post-layernorm-relu-activation-propagation.yaml  103-pythia-14m-minipile-post-layernorm-relu-orthogonal-ricker-full-pass-w1-c0p05-s0p05.yaml  104-pythia-14m-minipile-post-layernorm-relu-l1-naive-full-pass-w5.yaml  105-pythia-14m-minipile-post-layernorm-relu-ricker-naive-full-pass-w1-c0p05-s0p05.yaml  106-pythia-14m-minipile-post-layernorm-relu-rn-comparison-activation-propagation.yaml  107-pythia-14m-minipile-post-qkv-relu-qk-pre-rope-adamw-full-pass.yaml  108-pythia-14m-minipile-post-qkv-relu-qk-pre-rope-orthogonal-ricker-full-pass-w1-c0p05-s0p05.yaml  109-pythia-14m-minipile-post-qkv-relu-qk-pre-rope-orthogonal-l1-full-pass-w5.yaml  11-pythia-14m-minipile-orthogonal-l1-short.yaml  110-pythia-14m-minipile-post-qkv-relu-qk-post-rope-adamw-full-pass.yaml  (+262 more)
data/: README.md
(+118 files in other folders)
