[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-exp"
version = "0.1.0"
description = "Lean reproducible experiment harness for a research paper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pytest>=7.4",
    "numpy>=1.24",
    "datasets>=2.19",
    "transformers>=4.43",
    "torch>=2.4",
]

[project.scripts]
paper-exp = "paper_exp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp_run"
